# orm-tutorial

./: .gitignore  README.md  pyproject.toml  school.db  school_from_pandas.db  school_sqlmodel.db  school_sqlmodel_from_pandas.db  university.db  university_from_pandas_sqlmodel.db  university_sqlmodel.db
sqlalchemy_examples/: one_to_many.py
sqlalchemy_examples/gcp/: cloud_sql_connection.py
sqlalchemy_examples/mysql/: one_to_many_pandas.py
sqlalchemy_examples/sqlite/: many_to_many.py  many_to_many_pandas.py  one_to_many_pandas.py
sqlmodel_examples/: many_to_many.py  many_to_many_pandas.py  one_to_many.py
sqlmodel_examples/sqlite/: one_to_many_pandas.py
