[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orm-tutorial"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "A tutorial project for learning SQLAlchemy 2.0 and SQLModel relationships"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.8",
    "alembic>=1.11.0",
    "pydantic>=2.0.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pymysql>=1.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.5"]

[tool.ruff]
# Enable Pyflakes ('F'), pycodestyle ('E'), and import sorting ('I') by default
select = ["E", "F", "I"]
line-length = 88

# Sort imports
[tool.ruff.isort]
known-first-party = ["sqlalchemy_examples", "sqlmodel_examples"]

# Format code with ruff
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# This tells Hatchling which directories to include in the package
[tool.hatch.build.targets.wheel]
packages = ["sqlalchemy_examples", "sqlmodel_examples"]
